# ITMO_CT_courses

./: .gitmodules  README.md
EVM/Disassembler/: Dis.java  ParseSymTab.java
Java(1 sem) Введение в программирование/HwParadigms1/src/base/: ExtendedRandom.java
Java(1 sem) Введение в программирование/firstSem/: FastReverse.java  MyScannerWithNumberLine.java  Reverse.java  WsppSortedPosition.java
Java(1 sem) Введение в программирование/firstSem/expression/: Main.java  Max.java  Variable.java
Java(1 sem) Введение в программирование/firstSem/game/: Cell.java  FourPlayerGame.java  TicTacToeBoard.java
Java(1 sem) Введение в программирование/firstSem/markup/: AbstractMarkup.java  Emphasis.java  Main.java  Markup.java  Paragraph.java  Strong.java  Text.java
Java(1 sem) Введение в программирование/firstSem/md2html/: Code.java  ScannerMarkup.java
MathCourse/МатСтат/: M33351 Левицкий Иван.xlsx
MathCourses/МатЛог/hw/: HW27.hs  HW27h.hs
ProgrammCourses/FirstSem/AlgosLabs/: A3.java  B1.java  B2.java  B3.java  B4.java  C2.java  D1.java  baseNamberSort.java
ProgrammCourses/FirstSem/DMlabs/lab1/: ClassesPost.java  D.java  G.java  (+1 more)
ProgrammCourses/FirstSem/ЦК/: Tekh_proba_pera.txt
ProgrammCourses/SecondSem/ALGOSlabs/: B5_LCA_MIN.java
ProgrammCourses/SecondSem/Paradigms/: README.md
ProgrammCourses/SecondSem/c++/: RendImage.cpp
ProgrammCourses/SecondSem/c++(Морозов)/: calc.cpp
ProgrammCourses/Sem1/AlgosLabs/: A1.java  A2.java  A4.java  C1.java  D2.java  E2.java  mergeSort.java
ProgrammCourses/Sem1/ЦК/: komandy.txt
ProgrammCourses/Sem2/ALGOSlabs/: A5_LCA1.java  LCA_5C_find_move.java
ProgrammCourses/Sem2/c++(Морозов)/expressions-int128-Moahim2/: .gitignore  .gitmodules  CMakeLists.txt
ProgrammCourses/Sem2/c++(Морозов)/expressions-int128-Moahim2/include/: expression.h  int128.h
ProgrammCourses/Sem2/c++(Морозов)/expressions-int128-Moahim2/src/: int128.cpp
ProgrammCourses/Sem2/c++(Морозов)/expressions-int128-Moahim2/test/: .gitmodules  CMakeLists.txt  Strict.cmake
ProgrammCourses/Sem2/c++(Морозов)/expressions-int128-Moahim2/test/include/: expression_traits.tpp
ProgrammCourses/Sem2/c++(Морозов)/expressions-int128-Moahim2/test/src/: test_int128.cpp
ProgrammCourses/Sem2/c++(Морозов)/lfru-multi-type-Moahim2/test/: CMakeLists.txt  Strict.cmake
ProgrammCourses/Sem2/c++(Морозов)/lfru-multi-type-Moahim2/test/src/: test_cache.cpp
ProgrammCourses/Sem2/c++(Морозов)/percolation-Moahim2/: .gitmodules  CMakeLists.txt
ProgrammCourses/Sem2/c++(Морозов)/percolation-Moahim2/include/: Percolation.h
ProgrammCourses/Sem2/c++(Морозов)/percolation-Moahim2/src/: PercolationStats.cpp
ProgrammCourses/Sem2/c++(Морозов)/percolation-Moahim2/test/: CMakeLists.txt
ProgrammCourses/Sem2/c++(Морозов)/percolation-Moahim2/test/src/: test.cpp
ProgrammCourses/Sem4/ALGOSlabs/: C2.cpp  C2.kt  Carpenter2D.cpp  Cut.kt  FindMax2Subgraph.kt  Hobbits_TransitiveClosureGraph.kt  KunIn2Graph.kt  Mul.cpp  NormalFlow.kt  README.md  hungarian3B.cpp  main.cpp  Задачи - Codeforces.html
ProgrammCourses/Sem4/metopt/: Lab1.ipynb  Lab3.ipynb
Projects/fintech-company/: .gitignore  build.gradle  docker-compose.yml  settings.gradle
Projects/fintech-company/api/: build.gradle
Projects/fintech-company/common/: build.gradle
Projects/fintech-company/gradle/: libs.versions.toml
Projects/fintech-company/origination/: build.gradle
Projects/fintech-company/payment-gate/: Dockerfile
Projects/fintech-company/product-engine/: Dockerfile  build.gradle
Projects/fintech-company/scoring/: build.gradle
Projects/fintech-company/website/: index.html  package-lock.json  package.json
Projects/netty-server/: README.md  build.gradle  settings.gradle
Projects/netty-server/client/: build.gradle
Projects/netty-server/common/: build.gradle
Projects/netty-server/server/: build.gradle
UselessCourses/БЖД/: Лабораторная_работа__1._Пожар_ЛевицкийИванM3235.docx  Левицкий_Иван_Выявление_небезопасных_финансовых_операций.docx  Левицкий_Иван_М32351_Лабораторная_работа_Страх_и_его_преодоление.docx  Левицкий_Иван_Саморегуляция.docx  ЛевицкийИванБЖДЗдоровыйСон.docx
UselessCourses/История Науки и Техники/: Стратегия и тактика средневековых армий.docx  ЭссеПьерФерма.docx
lab1/: .vii.swo  .x.swp  emails.lst  ii  iii  ix  modification  students  vi  vii  x
lab2/: ]  ans_vii  data.tmp  i  ii  iii  iv  v  vi  vii
lab3/: crontab  i  iii  ivDop  report  testUntrash  v  vG  vO  viG
lab4/: backupModificate  newTest2Restore  upback
lab5/: newmem.bash
lab6/: a.out  adapt.py  adapt.sh  fn0  getValueE1  results1  starterChangeFile.sh  starterE.sh  starterParallelChangeFile.sh  watcherScript2.sh
(+1045 files in other folders)
